force-app/main/default/objects/Lead/fields/ACH_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Account_Number__c</fullName>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>