force-app/main/default/objects/Lead/fields/ACH_Name_on_Acount__c.field-meta.xml
<CustomField>
    <fullName>ACH_Name_on_Acount__c</fullName>
    <label>Name on Acount</label>
    <length>80</length>
    <type>Text</type>
</CustomField>