force-app/main/default/objects/Lead/fields/ACH_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>