force-app/main/default/objects/Lead/fields/Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Start_Date__c</fullName>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>