force-app/main/default/objects/Lead/fields/Card_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Card_Billing_Address__c</fullName>
    <label>Card Billing Address</label>
    <type>TextArea</type>
</CustomField>