force-app/main/default/objects/Lead/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foreclosure</fullName>
            </value>
            <value>
                <fullName>Non Disclosure</fullName>
            </value>
            <value>
                <fullName>General Real Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>