force-app/main/default/objects/Lead/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <label>Credit Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>