force-app/main/default/objects/Lead/fields/Day_of_Recurring_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Recurring_Billing_Date__c</fullName>
    <formula>DAY(TODAY())</formula>
    <label>Day of Recurring Billing Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>