force-app/main/default/objects/Lead/fields/Days_Spent_in_Not_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Days_Spent_in_Not_Contacted__c</fullName>
    <formula>FLOOR(MOD( Time_spent_in_Not_Contacted__c , 10080) / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Spent in Not Contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>