force-app/main/default/objects/Lead/fields/Days_spent_in_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Days_spent_in_Unqualified__c</fullName>
    <formula>FLOOR(MOD(Time_spent_in_Unqualified__c, 10080) / 1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days spent in Unqualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>