force-app/main/default/objects/Lead/fields/Dead_Reson__c.field-meta.xml
<CustomField>
    <fullName>Dead_Reson__c</fullName>
    <label>Dead Reson</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Responsive</fullName>
            </value>
            <value>
                <fullName>Affordability Issue</fullName>
            </value>
            <value>
                <fullName>Competition Won</fullName>
            </value>
            <value>
                <fullName>Bad Personality Fit</fullName>
            </value>
            <value>
                <fullName>SS Not Interested</fullName>
            </value>
            <value>
                <fullName>Not a lead</fullName>
            </value>
            <value>
                <fullName>Client Working Out with Lender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>