force-app/main/default/objects/Lead/fields/Direct_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Mail Sent</label>
    <type>Checkbox</type>
</CustomField>