force-app/main/default/objects/Lead/fields/Encrypted_Text_Test__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Text_Test__c</fullName>
    <label>Encrypted Text Test</label>
    <length>20</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>