force-app/main/default/objects/Lead/fields/Expected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue__c</fullName>
    <description>total calculated amount Initial Fee + (Monthly Fee * Terms)</description>
    <formula>Initial_Fee__c + (Monthly_Fee__c * Number_Of_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>total calculated amount Initial Fee + (Monthly Fee * Terms)</inlineHelpText>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>