force-app/main/default/objects/Lead/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>Billing model</description>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>