force-app/main/default/objects/Lead/fields/Foreclosure_Stage_at_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>Foreclosure_Stage_at_First_Contact__c</fullName>
    <inlineHelpText>Select the correct Stage that was issued by the time the lead contacted the firm</inlineHelpText>
    <label>Foreclosure Stage at First Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre NOD</fullName>
            </value>
            <value>
                <fullName>NOD</fullName>
            </value>
            <value>
                <fullName>NOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>