force-app/main/default/objects/Lead/fields/Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Funnel_Stage__c</fullName>
    <formula>IF(IsConverted, &quot;Converted&quot;,
IF(Retainer_Sent__c, &quot;Retainer Sent&quot;,
&quot;Lead Entered&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funnel Stage</label>
    <type>Text</type>
</CustomField>