force-app/main/default/objects/Lead/fields/Hour_spent_in_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Hour_spent_in_Unqualified__c</fullName>
    <formula>FLOOR(MOD(Time_spent_in_Unqualified__c, 1440) / 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour spent in Unqualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>