force-app/main/default/objects/Lead/fields/Hours_Since_Creation__c.field-meta.xml
<CustomField>
    <fullName>Hours_Since_Creation__c</fullName>
    <formula>( NOW() - CreatedDate ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Creation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>