force-app/main/default/objects/Lead/fields/Initial_Case_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Case_Fee__c</fullName>
    <label>Initial Case Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>