force-app/main/default/objects/Lead/fields/Initial_Fee__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee__c</fullName>
    <label>Initial Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>