force-app/main/default/objects/Lead/fields/Initial_Fee_Billed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Fee_Billed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Fee Billed</label>
    <type>Checkbox</type>
</CustomField>