force-app/main/default/objects/Lead/fields/Is_Unqualified_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Unqualified_Lead__c</fullName>
    <description>This will be checked if lead status is unqialified</description>
    <formula>IF(  ISPICKVAL(Status , &quot;Unqualified&quot;), &quot;Unqualified&quot;, &quot;Qualified&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Unqualified Lead?</label>
    <type>Text</type>
</CustomField>