force-app/main/default/objects/Lead/fields/Last_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change__c</fullName>
    <label>Last_Status_Change</label>
    <type>DateTime</type>
</CustomField>