force-app/main/default/objects/Lead/fields/Mass_Email_List__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email_List__c</fullName>
    <inlineHelpText>Decide whether to add the lead to the mass email list. Do this once a lead has deaded out.</inlineHelpText>
    <label>Mass Email List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>