force-app/main/default/objects/Lead/fields/Meeting_or_Phone_Only__c.field-meta.xml
<CustomField>
    <fullName>Meeting_or_Phone_Only__c</fullName>
    <formula>IF( In_Person_Meeting__c , &quot;In-Person Meeting&quot;, &quot;Phone Only&quot;)</formula>
    <label>Meeting or Phone Only</label>
    <type>Text</type>
</CustomField>