force-app/main/default/objects/Lead/fields/Next_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Invoice_Date__c</fullName>
    <formula>IF(DAY(TODAY()) &lt;= 28, DATE(YEAR(TODAY()), MONTH(TODAY())+1, 1), DATE(YEAR(TODAY()), MONTH(TODAY())+2, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Invoice Date</label>
    <type>Date</type>
</CustomField>