force-app/main/default/objects/Lead/fields/NorCal_or_SoCal__c.field-meta.xml
<CustomField>
    <fullName>NorCal_or_SoCal__c</fullName>
    <label>NorCal or SoCal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northern California</fullName>
            </value>
            <value>
                <fullName>Southern California</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>