force-app/main/default/objects/Lead/fields/Number_Of_Terms__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Terms__c</fullName>
    <label>Number Of Terms</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>