force-app/main/default/objects/Lead/fields/Recurring_Billing_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Date__c</fullName>
    <defaultValue>ADDMONTHS(TODAY(), 1)</defaultValue>
    <label>Recurring Billing Date</label>
    <type>Date</type>
</CustomField>