force-app/main/default/objects/Lead/fields/Recurring_Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Billing_Start_Date__c</fullName>
    <description>this field contains 1 month after date from todays date</description>
    <formula>ADDMONTHS( TODAY() , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Billing Start Date</label>
    <type>Date</type>
</CustomField>