force-app/main/default/objects/Lead/fields/Retainer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retainer Sent</label>
    <type>Checkbox</type>
</CustomField>