force-app/main/default/objects/Lead/fields/Retainer_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Sent_Date__c</fullName>
    <label>Retainer Sent Date</label>
    <type>Date</type>
</CustomField>