force-app/main/default/objects/Lead/fields/Retainer_Signed__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retainer Signed</label>
    <type>Checkbox</type>
</CustomField>