force-app/main/default/objects/Lead/fields/Retainer_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Signed_Date__c</fullName>
    <label>Retainer Signed Date</label>
    <type>Date</type>
</CustomField>