force-app/main/default/objects/Lead/fields/Role_For_Pandadoc__c.field-meta.xml
<CustomField>
    <fullName>Role_For_Pandadoc__c</fullName>
    <formula>&quot;Client&quot;</formula>
    <label>Role For Pandadoc</label>
    <type>Text</type>
</CustomField>