force-app/main/default/objects/Lead/fields/Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Customer ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>