force-app/main/default/objects/Lead/fields/Time_In_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Time_In_Current_Status__c</fullName>
    <formula>IF(
    ISBLANK(Last_Status_Change__c), 
    0,
    (NOW() - Last_Status_Change__c) * 1440
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time_In_Current_Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>