force-app/main/default/objects/Lead/fields/Time_in_Retainer_Signed__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Retainer_Signed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time_in_Retainer Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>