force-app/main/default/objects/Lead/fields/Time_spent_in_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Time_spent_in_Unqualified__c</fullName>
    <formula>IF(
    ISPICKVAL(Status, &quot;Unqualified&quot;),
      Time_in_Unqualified__c   +  Time_In_Current_Status__c ,
    Time_in_Unqualified__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes spent in Unqualified</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>