force-app/main/default/objects/Lead/fields/Today_s_Date__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date__c</fullName>
    <formula>TEXT(MONTH(TODAY()))
+&quot;/&quot;+
TEXT(DAY(TODAY()))
+&quot;/&quot;+
TEXT(YEAR(TODAY()))</formula>
    <label>Today&apos;s Date</label>
    <type>Text</type>
</CustomField>