force-app/main/default/objects/Lead/fields/Today_s_Date_as_Text__c.field-meta.xml
<CustomField>
    <fullName>Today_s_Date_as_Text__c</fullName>
    <formula>CASE(
    MONTH(TODAY()),
    1, &quot;January&quot;,
    2, &quot;February&quot;,
    3, &quot;March&quot;,
    4, &quot;April&quot;,
    5, &quot;May&quot;,
    6, &quot;June&quot;,
    7, &quot;July&quot;,
    8, &quot;August&quot;,
    9, &quot;September&quot;,
    10, &quot;October&quot;,
    11, &quot;November&quot;,
    12, &quot;December&quot;,
    &quot;&quot;
) 
&amp; &quot; &quot; &amp; 
TEXT(DAY(TODAY())) &amp; 
&quot;, &quot; &amp; 
TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today&apos;s Date as Text</label>
    <type>Text</type>
</CustomField>